# pants-plugins

./: .ansible-lint  .gitignore  BUILD  BUILD.pants  README.md  mypy.ini  pants.ci.toml  pants.toml  pants_from_sources  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: pants.yml
build-support/: BUILD  install-hooks.sh  setuptools.txt
build-support/githooks/: pre-commit
build-support/lockfiles/: pants-plugins.lock.metadata  python-default.lock.metadata
build-support/pants-plugins/: lock.txt
build-support/python/: default_lock.txt  pyoxidizer_lock.txt
core/: BUILD.pants
core/core/: foo.py  greeter.py
examples/ansible/helloansible/: BUILD.pants  requirements.yml
examples/cc/: CMakeLists.txt
examples/cc/app/: CMakeLists.txt
examples/cc/app/src/: foo.c  foo.h  main.cpp
examples/cc/core/: BUILD.pants  CMakeLists.txt
examples/cc/core/include/core/: BUILD.pants  greeter.h
examples/cc/core/src/: BUILD.pants  greeter-private.h  greeter.c
examples/cc/core/tests/: BUILD.pants  greeter.cpp
examples/cc/hellocpp/: BUILD.pants
examples/cc/trivialc/: CMakeLists.txt
examples/cc/trivialc/src/: BUILD.pants  main.c
examples/cc/trivialcpp/: CMakeLists.txt
examples/cc/trivialcpp/src/: BUILD.pants
examples/cc/triviallib/: BUILD.pants
examples/cc/triviallib/include/triviallib/: BUILD.pants  bar.h
examples/cc/triviallib/src/: BUILD.pants  bar.c
examples/python/: BUILD.pants  requirements.constraints.txt
examples/swift/: BUILD.pants
helloansible/: BUILD.pants  README.md  other_playbook.yml  playbook.yml
helloansible/inventories/: localhost
helloansible/tasks/: main.yml
hellocpp/: BUILD.pants
hellofastapi/: BUILD.pants
hellofastapi/hellofastapi/: main.py
hellofib/: BUILD.pants
hellofib/hellofib/: main.py
hellokivy/: BUILD.pants  pyoxidizer.bzl
hellonumpy/: BUILD.pants
hellonumpy/hellonumpy/: main.py
helloswift/: BUILD.pants
helloswift/Sources/: main.swift  main1.swift
hellotemplate/: BUILD.pants  pyoxidizer.bzlt
hellotemplate/hellotemplate/: main.py
hellotyper/: BUILD.pants
hellotyper/hellotyper/: main.py
hellotypescript/: .prettierrc  BUILD.pants  package.json
hellotypescript/src/: main.ts
helloworld/: BUILD.pants
helloworld/helloworld/: main.py  speaker.py
init-pants/: README.md  action.yaml
pants-plugins/: BUILD  README.md
run-tox/: action.yml
(+167 files in other folders)
